Bug 616800 - Ensure AudioLoop() doesn't sleep, and can still drain, if we've pushed less than the start threshold of audio to hardware. r=kinetik a=blocking2.0